--- a/Assignments/ASSIGNMENT_1_NEDIM_AZAR.ipynb
+++ b/Assignments/ASSIGNMENT_1_NEDIM_AZAR.ipynb
@@ -159,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -168,14 +168,16 @@
        "1"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# try out the modulus operator!\n",
-    "26 % 5"
+    "26 % 5\n",
+    "\n",
+    "# The modulus operator gives us the remainder of dividing the number on its left by the number on its right."
    ]
   },
   {
