--- a/Assignments/ASSIGNMENT_2_NEDIM_AZAR/ASSIGNMENT-2.ipynb
+++ b/Assignments/ASSIGNMENT_2_NEDIM_AZAR/ASSIGNMENT-2.ipynb
@@ -741,7 +741,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -1159,7 +1159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1701,11 +1701,212 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def exclude_and_count"
+    "def exclude_and_count(words):\n",
+    "    filtered = words\n",
+    "    filtered = [word for word in filtered if word[-1] != 'e']\n",
+    "    filtered = [word for word in filtered if word[0] != 't']\n",
+    "    filtered = [word for word in filtered if not (word[0] == 'c' and word[-1] == 'w')]\n",
+    "    filtered = [word for word in filtered if len(word) < 6]\n",
+    "\n",
+    "    frequencies = {word: filtered.count(word) / len(filtered) for word in filtered}\n",
+    "    return frequencies"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "words = ['there',\n",
+    " 'was',\n",
+    " 'a',\n",
+    " 'village',\n",
+    " 'near',\n",
+    " 'a',\n",
+    " 'jungle',\n",
+    " 'the',\n",
+    " 'village',\n",
+    " 'cows',\n",
+    " 'used',\n",
+    " 'to',\n",
+    " 'go',\n",
+    " 'up',\n",
+    " 'to',\n",
+    " 'the',\n",
+    " 'jungle',\n",
+    " 'in',\n",
+    " 'search',\n",
+    " 'of',\n",
+    " 'food.',\n",
+    " 'in',\n",
+    " 'the',\n",
+    " 'forest',\n",
+    " 'there',\n",
+    " 'lived',\n",
+    " 'a',\n",
+    " 'wicked',\n",
+    " 'lion',\n",
+    " 'he',\n",
+    " 'used',\n",
+    " 'to',\n",
+    " 'kill',\n",
+    " 'a',\n",
+    " 'cow',\n",
+    " 'now',\n",
+    " 'and',\n",
+    " 'then',\n",
+    " 'and',\n",
+    " 'eat',\n",
+    " 'her',\n",
+    " 'this',\n",
+    " 'was',\n",
+    " 'happening',\n",
+    " 'for',\n",
+    " 'quite',\n",
+    " 'sometime',\n",
+    " 'the',\n",
+    " 'cows',\n",
+    " 'were',\n",
+    " 'frightened',\n",
+    " 'one',\n",
+    " 'day',\n",
+    " 'all',\n",
+    " 'the',\n",
+    " 'cows',\n",
+    " 'held',\n",
+    " 'a',\n",
+    " 'meeting',\n",
+    " 'an',\n",
+    " 'old',\n",
+    " 'cow',\n",
+    " 'said',\n",
+    " 'listen',\n",
+    " 'everybody',\n",
+    " 'the',\n",
+    " 'lion',\n",
+    " 'eats',\n",
+    " 'one',\n",
+    " 'of',\n",
+    " 'us',\n",
+    " 'only',\n",
+    " 'because',\n",
+    " 'we',\n",
+    " 'go',\n",
+    " 'into',\n",
+    " 'the',\n",
+    " 'jungle',\n",
+    " 'separately',\n",
+    " 'from',\n",
+    " 'now',\n",
+    " 'on',\n",
+    " 'we',\n",
+    " 'will',\n",
+    " 'all',\n",
+    " 'be',\n",
+    " 'together',\n",
+    " 'from',\n",
+    " 'then',\n",
+    " 'on',\n",
+    " 'all',\n",
+    " 'the',\n",
+    " 'cows',\n",
+    " 'went',\n",
+    " 'into',\n",
+    " 'the',\n",
+    " 'jungle',\n",
+    " 'in',\n",
+    " 'a',\n",
+    " 'herd',\n",
+    " 'when',\n",
+    " 'they',\n",
+    " 'heard',\n",
+    " 'or',\n",
+    " 'saw',\n",
+    " 'the',\n",
+    " 'lion',\n",
+    " 'all',\n",
+    " 'of',\n",
+    " 'them',\n",
+    " 'unitedly',\n",
+    " 'moo',\n",
+    " 'and',\n",
+    " 'chased',\n",
+    " 'him',\n",
+    " 'away',\n",
+    " 'moral',\n",
+    " 'divided',\n",
+    " 'we',\n",
+    " 'fall',\n",
+    " 'united',\n",
+    " 'we',\n",
+    " 'stand']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'was': 0.028985507246376812,\n",
+       " 'a': 0.08695652173913043,\n",
+       " 'near': 0.014492753623188406,\n",
+       " 'cows': 0.057971014492753624,\n",
+       " 'used': 0.028985507246376812,\n",
+       " 'go': 0.028985507246376812,\n",
+       " 'up': 0.014492753623188406,\n",
+       " 'in': 0.043478260869565216,\n",
+       " 'of': 0.043478260869565216,\n",
+       " 'food.': 0.014492753623188406,\n",
+       " 'lived': 0.014492753623188406,\n",
+       " 'lion': 0.043478260869565216,\n",
+       " 'kill': 0.014492753623188406,\n",
+       " 'now': 0.028985507246376812,\n",
+       " 'and': 0.043478260869565216,\n",
+       " 'eat': 0.014492753623188406,\n",
+       " 'her': 0.014492753623188406,\n",
+       " 'for': 0.014492753623188406,\n",
+       " 'day': 0.014492753623188406,\n",
+       " 'all': 0.057971014492753624,\n",
+       " 'held': 0.014492753623188406,\n",
+       " 'an': 0.014492753623188406,\n",
+       " 'old': 0.014492753623188406,\n",
+       " 'said': 0.014492753623188406,\n",
+       " 'eats': 0.014492753623188406,\n",
+       " 'us': 0.014492753623188406,\n",
+       " 'only': 0.014492753623188406,\n",
+       " 'into': 0.028985507246376812,\n",
+       " 'from': 0.028985507246376812,\n",
+       " 'on': 0.028985507246376812,\n",
+       " 'will': 0.014492753623188406,\n",
+       " 'went': 0.014492753623188406,\n",
+       " 'herd': 0.014492753623188406,\n",
+       " 'when': 0.014492753623188406,\n",
+       " 'heard': 0.014492753623188406,\n",
+       " 'or': 0.014492753623188406,\n",
+       " 'saw': 0.014492753623188406,\n",
+       " 'moo': 0.014492753623188406,\n",
+       " 'him': 0.014492753623188406,\n",
+       " 'away': 0.014492753623188406,\n",
+       " 'moral': 0.014492753623188406,\n",
+       " 'fall': 0.014492753623188406,\n",
+       " 'stand': 0.014492753623188406}"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "exclude_and_count(words)"
    ]
   },
   {
@@ -1724,11 +1925,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "Positional parameters are parameters that are specified by position (i.e. the first parameter is the first value, the second parameter is the second value, etc.). Keyword parameters are parameters that are specified by name (i.e. the parameter name is specified as a keyword)."
+   ]
   },
   {
    "cell_type": "markdown",
@@ -1738,11 +1939,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "You can define sets {element1, element2, ...} or dictionaries {key: value,...} using curly brackets in python."
+   ]
   },
   {
    "cell_type": "markdown",
@@ -1752,11 +1953,15 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "* Lists can contain duplicate elements, whereas sets cannot by definition.\n",
+    "* Lists are ordered, while sets are not.\n",
+    "    * set([1, 2]) == set([2, 1]) -> True\n",
+    "    * [1, 2] == [2, 1] -> False\n",
+    "* The elements of a list can be any object (even another list), whereas the elements of a set must be immutable.\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -1767,10 +1972,173 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "John's name contains the letter \"o\"!\n",
+      "Ringo's name contains the letter \"o\"!\n",
+      "George's name contains the letter \"o\"!\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Continue will skip to the next iteration of the loop without executing any code remaining in the body\n",
+    "\n",
+    "beatles = ['Paul', 'John', 'Ringo', 'George']\n",
+    "for beatle in beatles:\n",
+    "    if 'o' not in beatle:\n",
+    "        continue\n",
+    "    print(f\"{beatle}'s name contains the letter \\\"o\\\"!\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Looking for 42...\n",
+      "Looking for 42...\n",
+      "Looking for 42...\n",
+      "Looking for 42...\n",
+      "Looking for 42...\n",
+      "Looking for 42...\n",
+      "Looking for 42...\n",
+      "Looking for 42...\n",
+      "Looking for 42...\n",
+      "Looking for 42...\n",
+      "Looking for 42...\n",
+      "Looking for 42...\n",
+      "Looking for 42...\n",
+      "Looking for 42...\n",
+      "Looking for 42...\n",
+      "Looking for 42...\n",
+      "Looking for 42...\n",
+      "Looking for 42...\n",
+      "Looking for 42...\n",
+      "Looking for 42...\n",
+      "Looking for 42...\n",
+      "Looking for 42...\n",
+      "Looking for 42...\n",
+      "Looking for 42...\n",
+      "Looking for 42...\n",
+      "Looking for 42...\n",
+      "Looking for 42...\n",
+      "Looking for 42...\n",
+      "Looking for 42...\n",
+      "Looking for 42...\n",
+      "Looking for 42...\n",
+      "Looking for 42...\n",
+      "Looking for 42...\n",
+      "Looking for 42...\n",
+      "Looking for 42...\n",
+      "Looking for 42...\n",
+      "Looking for 42...\n",
+      "Looking for 42...\n",
+      "Looking for 42...\n",
+      "Looking for 42...\n",
+      "Looking for 42...\n",
+      "Looking for 42...\n",
+      "Looking for 42...\n",
+      "Looking for 42...\n",
+      "Looking for 42...\n",
+      "Looking for 42...\n",
+      "Looking for 42...\n",
+      "Looking for 42...\n",
+      "Looking for 42...\n",
+      "Looking for 42...\n",
+      "Looking for 42...\n",
+      "Looking for 42...\n",
+      "Looking for 42...\n",
+      "Looking for 42...\n",
+      "Looking for 42...\n",
+      "Looking for 42...\n",
+      "Looking for 42...\n",
+      "Looking for 42...\n",
+      "Looking for 42...\n",
+      "Looking for 42...\n",
+      "Looking for 42...\n",
+      "Looking for 42...\n",
+      "Looking for 42...\n",
+      "Looking for 42...\n",
+      "Looking for 42...\n",
+      "Looking for 42...\n",
+      "Looking for 42...\n",
+      "Looking for 42...\n",
+      "Looking for 42...\n",
+      "Looking for 42...\n",
+      "Looking for 42...\n",
+      "Looking for 42...\n",
+      "Looking for 42...\n",
+      "Looking for 42...\n",
+      "Looking for 42...\n",
+      "Looking for 42...\n",
+      "Looking for 42...\n",
+      "Looking for 42...\n",
+      "Looking for 42...\n",
+      "Looking for 42...\n",
+      "Looking for 42...\n",
+      "Looking for 42...\n",
+      "Looking for 42...\n",
+      "Looking for 42...\n",
+      "Looking for 42...\n",
+      "Looking for 42...\n",
+      "Looking for 42...\n",
+      "Looking for 42...\n",
+      "Looking for 42...\n",
+      "Looking for 42...\n",
+      "Looking for 42...\n",
+      "Looking for 42...\n",
+      "Looking for 42...\n",
+      "Looking for 42...\n",
+      "Looking for 42...\n",
+      "Looking for 42...\n",
+      "Looking for 42...\n",
+      "Looking for 42...\n",
+      "Looking for 42...\n",
+      "Looking for 42...\n",
+      "Looking for 42...\n",
+      "Looking for 42...\n",
+      "Looking for 42...\n",
+      "Looking for 42...\n",
+      "Looking for 42...\n",
+      "Looking for 42...\n",
+      "Looking for 42...\n",
+      "Looking for 42...\n",
+      "Looking for 42...\n",
+      "Looking for 42...\n",
+      "Looking for 42...\n",
+      "Looking for 42...\n",
+      "Looking for 42...\n",
+      "Looking for 42...\n",
+      "Looking for 42...\n",
+      "Looking for 42...\n",
+      "Looking for 42...\n",
+      "Looking for 42...\n",
+      "Looking for 42...\n",
+      "Looking for 42...\n",
+      "Bingo! 42!!\n"
+     ]
+    }
+   ],
+   "source": [
+    "import random\n",
+    "# Break will stop the execution of the loop, and any remining iterations will be scrapped. Code execution resumes after the loop\n",
+    "\n",
+    "# Here I'm using break to end an infinite loop\n",
+    "while True:\n",
+    "    print(\"Looking for 42...\")\n",
+    "    if random.randint(0, 100) == 42:\n",
+    "        break\n",
+    "print(\"Bingo! 42!!\")"
+   ]
   }
  ],
  "metadata": {
