--- a/Assignments/ASSIGNMENT-4b-MA.ipynb
+++ b/Assignments/ASSIGNMENT-4b-MA.ipynb
@@ -2,6 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "442f70cb",
    "metadata": {},
    "source": [
     "# Assignment 4 MA Part B\n",
@@ -41,6 +42,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "e627023e",
    "metadata": {},
    "source": [
     "# Step 1: Prepare the data and understand the corpus structure \n",
@@ -74,6 +76,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
+   "id": "7fb008c7",
    "metadata": {},
    "outputs": [
     {
@@ -93,6 +96,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
+   "id": "020702a5",
    "metadata": {},
    "outputs": [
     {
@@ -110,6 +114,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "dd47c7ff",
    "metadata": {},
    "source": [
     "**2.) Unzipping the xml files**\n",
@@ -131,6 +136,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
+   "id": "2a3bec9e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -139,6 +145,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "48a5076a",
    "metadata": {},
    "source": [
     "**3.) Understanding the structure of the corpus** \n",
@@ -155,6 +162,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
+   "id": "916884e2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -163,6 +171,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "389ee0dd",
    "metadata": {},
    "source": [
     "**4.) Understanding the xml structure and finding translations of the same text**\n",
@@ -186,6 +195,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
+   "id": "961c04e3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -195,6 +205,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
+   "id": "252a4986",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -204,6 +215,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
+   "id": "4ee8c2df",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -214,6 +226,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
+   "id": "9084bab7",
    "metadata": {},
    "outputs": [
     {
@@ -235,6 +248,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
+   "id": "7402ee03",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -247,6 +261,7 @@
   {
    "cell_type": "code",
    "execution_count": 40,
+   "id": "aabe7a58",
    "metadata": {},
    "outputs": [
     {
@@ -272,6 +287,7 @@
   {
    "cell_type": "code",
    "execution_count": 41,
+   "id": "a523a5a8",
    "metadata": {},
    "outputs": [
     {
@@ -291,6 +307,7 @@
   {
    "cell_type": "code",
    "execution_count": 47,
+   "id": "c9c02b8d",
    "metadata": {},
    "outputs": [
     {
@@ -329,6 +346,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "0afb3320",
    "metadata": {},
    "source": [
     "# Assignment\n",
@@ -401,6 +419,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "b4f3e2a5",
    "metadata": {},
    "source": [
     "**Recommended helper functions**\n",
@@ -421,6 +440,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "be8d95b8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -447,6 +467,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "00f959d4",
    "metadata": {},
    "source": [
     "# Part II: Analyze the translations\n",
@@ -467,6 +488,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "83b7b815",
    "metadata": {},
    "source": [
     "### Step 1. Map languages to filepaths (x points)\n",
@@ -491,6 +513,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
+   "id": "8aca3d23",
    "metadata": {},
    "outputs": [
     {
@@ -515,6 +538,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "6aa74191",
    "metadata": {},
    "source": [
     "### Step 2: Write a function which returns the language with the most/least translations\n",
@@ -536,6 +560,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "635db052",
    "metadata": {},
    "source": [
     "### Step 3: Map talk ids to titles\n",
@@ -550,6 +575,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "d8b59e24",
    "metadata": {},
    "source": [
     "### Step 4 Map talks to languages they have been translated into\n",
@@ -575,6 +601,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "d9b54a59",
    "metadata": {},
    "source": [
     "### Step 5: Map number of languages to talks\n",
@@ -602,6 +629,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "5d47e835",
    "metadata": {},
    "source": [
     "### Step 6: Put it all together\n",
@@ -645,6 +673,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "d8b4a602",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -652,7 +681,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -666,7 +695,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.8.10"
   }
  },
  "nbformat": 4,
